@@ -1,263 +1,0 @@
-@comment $NetBSD: PLIST,v 1.15 2022/01/14 17:51:52 wiz Exp $
-${PYSITELIB}/${EGG_INFODIR}
-${PYSITELIB}/bzrlib/plugins/svn/__init__.py
-${PYSITELIB}/bzrlib/plugins/svn/__init__.pyc
-${PYSITELIB}/bzrlib/plugins/svn/__init__.pyo
-${PYSITELIB}/bzrlib/plugins/svn/annotate.py
-${PYSITELIB}/bzrlib/plugins/svn/annotate.pyc
-${PYSITELIB}/bzrlib/plugins/svn/annotate.pyo
-${PYSITELIB}/bzrlib/plugins/svn/auth.py
-${PYSITELIB}/bzrlib/plugins/svn/auth.pyc
-${PYSITELIB}/bzrlib/plugins/svn/auth.pyo
-${PYSITELIB}/bzrlib/plugins/svn/branch.py
-${PYSITELIB}/bzrlib/plugins/svn/branch.pyc
-${PYSITELIB}/bzrlib/plugins/svn/branch.pyo
-${PYSITELIB}/bzrlib/plugins/svn/branchprops.py
-${PYSITELIB}/bzrlib/plugins/svn/branchprops.pyc
-${PYSITELIB}/bzrlib/plugins/svn/branchprops.pyo
-${PYSITELIB}/bzrlib/plugins/svn/cache/__init__.py
-${PYSITELIB}/bzrlib/plugins/svn/cache/__init__.pyc
-${PYSITELIB}/bzrlib/plugins/svn/cache/__init__.pyo
-${PYSITELIB}/bzrlib/plugins/svn/cache/sqlitecache.py
-${PYSITELIB}/bzrlib/plugins/svn/cache/sqlitecache.pyc
-${PYSITELIB}/bzrlib/plugins/svn/cache/sqlitecache.pyo
-${PYSITELIB}/bzrlib/plugins/svn/cache/tdbcache.py
-${PYSITELIB}/bzrlib/plugins/svn/cache/tdbcache.pyc
-${PYSITELIB}/bzrlib/plugins/svn/cache/tdbcache.pyo
-${PYSITELIB}/bzrlib/plugins/svn/changes.py
-${PYSITELIB}/bzrlib/plugins/svn/changes.pyc
-${PYSITELIB}/bzrlib/plugins/svn/changes.pyo
-${PYSITELIB}/bzrlib/plugins/svn/commands.py
-${PYSITELIB}/bzrlib/plugins/svn/commands.pyc
-${PYSITELIB}/bzrlib/plugins/svn/commands.pyo
-${PYSITELIB}/bzrlib/plugins/svn/commit.py
-${PYSITELIB}/bzrlib/plugins/svn/commit.pyc
-${PYSITELIB}/bzrlib/plugins/svn/commit.pyo
-${PYSITELIB}/bzrlib/plugins/svn/config.py
-${PYSITELIB}/bzrlib/plugins/svn/config.pyc
-${PYSITELIB}/bzrlib/plugins/svn/config.pyo
-${PYSITELIB}/bzrlib/plugins/svn/convert.py
-${PYSITELIB}/bzrlib/plugins/svn/convert.pyc
-${PYSITELIB}/bzrlib/plugins/svn/convert.pyo
-${PYSITELIB}/bzrlib/plugins/svn/errors.py
-${PYSITELIB}/bzrlib/plugins/svn/errors.pyc
-${PYSITELIB}/bzrlib/plugins/svn/errors.pyo
-${PYSITELIB}/bzrlib/plugins/svn/fetch.py
-${PYSITELIB}/bzrlib/plugins/svn/fetch.pyc
-${PYSITELIB}/bzrlib/plugins/svn/fetch.pyo
-${PYSITELIB}/bzrlib/plugins/svn/filegraph.py
-${PYSITELIB}/bzrlib/plugins/svn/filegraph.pyc
-${PYSITELIB}/bzrlib/plugins/svn/filegraph.pyo
-${PYSITELIB}/bzrlib/plugins/svn/fileids.py
-${PYSITELIB}/bzrlib/plugins/svn/fileids.pyc
-${PYSITELIB}/bzrlib/plugins/svn/fileids.pyo
-${PYSITELIB}/bzrlib/plugins/svn/graph.py
-${PYSITELIB}/bzrlib/plugins/svn/graph.pyc
-${PYSITELIB}/bzrlib/plugins/svn/graph.pyo
-${PYSITELIB}/bzrlib/plugins/svn/info.py
-${PYSITELIB}/bzrlib/plugins/svn/info.pyc
-${PYSITELIB}/bzrlib/plugins/svn/info.pyo
-${PYSITELIB}/bzrlib/plugins/svn/keywords.py
-${PYSITELIB}/bzrlib/plugins/svn/keywords.pyc
-${PYSITELIB}/bzrlib/plugins/svn/keywords.pyo
-${PYSITELIB}/bzrlib/plugins/svn/layout/__init__.py
-${PYSITELIB}/bzrlib/plugins/svn/layout/__init__.pyc
-${PYSITELIB}/bzrlib/plugins/svn/layout/__init__.pyo
-${PYSITELIB}/bzrlib/plugins/svn/layout/guess.py
-${PYSITELIB}/bzrlib/plugins/svn/layout/guess.pyc
-${PYSITELIB}/bzrlib/plugins/svn/layout/guess.pyo
-${PYSITELIB}/bzrlib/plugins/svn/layout/standard.py
-${PYSITELIB}/bzrlib/plugins/svn/layout/standard.pyc
-${PYSITELIB}/bzrlib/plugins/svn/layout/standard.pyo
-${PYSITELIB}/bzrlib/plugins/svn/logwalker.py
-${PYSITELIB}/bzrlib/plugins/svn/logwalker.pyc
-${PYSITELIB}/bzrlib/plugins/svn/logwalker.pyo
-${PYSITELIB}/bzrlib/plugins/svn/mapping.py
-${PYSITELIB}/bzrlib/plugins/svn/mapping.pyc
-${PYSITELIB}/bzrlib/plugins/svn/mapping.pyo
-${PYSITELIB}/bzrlib/plugins/svn/mapping2.py
-${PYSITELIB}/bzrlib/plugins/svn/mapping2.pyc
-${PYSITELIB}/bzrlib/plugins/svn/mapping2.pyo
-${PYSITELIB}/bzrlib/plugins/svn/mapping3/__init__.py
-${PYSITELIB}/bzrlib/plugins/svn/mapping3/__init__.pyc
-${PYSITELIB}/bzrlib/plugins/svn/mapping3/__init__.pyo
-${PYSITELIB}/bzrlib/plugins/svn/mapping3/base.py
-${PYSITELIB}/bzrlib/plugins/svn/mapping3/base.pyc
-${PYSITELIB}/bzrlib/plugins/svn/mapping3/base.pyo
-${PYSITELIB}/bzrlib/plugins/svn/mapping3/commands.py
-${PYSITELIB}/bzrlib/plugins/svn/mapping3/commands.pyc
-${PYSITELIB}/bzrlib/plugins/svn/mapping3/commands.pyo
-${PYSITELIB}/bzrlib/plugins/svn/mapping3/scheme.py
-${PYSITELIB}/bzrlib/plugins/svn/mapping3/scheme.pyc
-${PYSITELIB}/bzrlib/plugins/svn/mapping3/scheme.pyo
-${PYSITELIB}/bzrlib/plugins/svn/mapping4.py
-${PYSITELIB}/bzrlib/plugins/svn/mapping4.pyc
-${PYSITELIB}/bzrlib/plugins/svn/mapping4.pyo
-${PYSITELIB}/bzrlib/plugins/svn/metagraph.py
-${PYSITELIB}/bzrlib/plugins/svn/metagraph.pyc
-${PYSITELIB}/bzrlib/plugins/svn/metagraph.pyo
-${PYSITELIB}/bzrlib/plugins/svn/parents.py
-${PYSITELIB}/bzrlib/plugins/svn/parents.pyc
-${PYSITELIB}/bzrlib/plugins/svn/parents.pyo
-${PYSITELIB}/bzrlib/plugins/svn/push.py
-${PYSITELIB}/bzrlib/plugins/svn/push.pyc
-${PYSITELIB}/bzrlib/plugins/svn/push.pyo
-${PYSITELIB}/bzrlib/plugins/svn/reconcile.py
-${PYSITELIB}/bzrlib/plugins/svn/reconcile.pyc
-${PYSITELIB}/bzrlib/plugins/svn/reconcile.pyo
-${PYSITELIB}/bzrlib/plugins/svn/remote.py
-${PYSITELIB}/bzrlib/plugins/svn/remote.pyc
-${PYSITELIB}/bzrlib/plugins/svn/remote.pyo
-${PYSITELIB}/bzrlib/plugins/svn/repository.py
-${PYSITELIB}/bzrlib/plugins/svn/repository.pyc
-${PYSITELIB}/bzrlib/plugins/svn/repository.pyo
-${PYSITELIB}/bzrlib/plugins/svn/revids.py
-${PYSITELIB}/bzrlib/plugins/svn/revids.pyc
-${PYSITELIB}/bzrlib/plugins/svn/revids.pyo
-${PYSITELIB}/bzrlib/plugins/svn/revmeta.py
-${PYSITELIB}/bzrlib/plugins/svn/revmeta.pyc
-${PYSITELIB}/bzrlib/plugins/svn/revmeta.pyo
-${PYSITELIB}/bzrlib/plugins/svn/revspec.py
-${PYSITELIB}/bzrlib/plugins/svn/revspec.pyc
-${PYSITELIB}/bzrlib/plugins/svn/revspec.pyo
-${PYSITELIB}/bzrlib/plugins/svn/send.py
-${PYSITELIB}/bzrlib/plugins/svn/send.pyc
-${PYSITELIB}/bzrlib/plugins/svn/send.pyo
-${PYSITELIB}/bzrlib/plugins/svn/server.py
-${PYSITELIB}/bzrlib/plugins/svn/server.pyc
-${PYSITELIB}/bzrlib/plugins/svn/server.pyo
-${PYSITELIB}/bzrlib/plugins/svn/svk.py
-${PYSITELIB}/bzrlib/plugins/svn/svk.pyc
-${PYSITELIB}/bzrlib/plugins/svn/svk.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tags.py
-${PYSITELIB}/bzrlib/plugins/svn/tags.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tags.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/__init__.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/__init__.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/__init__.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/layout/__init__.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/layout/__init__.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/layout/__init__.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/layout/test_guess.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/layout/test_guess.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/layout/test_guess.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/layout/test_standard.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/layout/test_standard.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/layout/test_standard.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/mapping3/__init__.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/mapping3/__init__.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/mapping3/__init__.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/mapping3/test_scheme.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/mapping3/test_scheme.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/mapping3/test_scheme.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/mapping_implementations/__init__.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/mapping_implementations/__init__.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/mapping_implementations/__init__.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/mapping_implementations/test_base.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/mapping_implementations/test_base.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/mapping_implementations/test_base.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/mapping_implementations/test_branch.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/mapping_implementations/test_branch.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/mapping_implementations/test_branch.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/mapping_implementations/test_repository.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/mapping_implementations/test_repository.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/mapping_implementations/test_repository.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_blackbox.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_blackbox.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_blackbox.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_branch.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_branch.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_branch.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_branchprops.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_branchprops.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_branchprops.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_cache.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_cache.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_cache.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_changes.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_changes.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_changes.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_checkout.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_checkout.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_checkout.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_commit.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_commit.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_commit.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_commit_ids.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_commit_ids.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_commit_ids.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_config.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_config.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_config.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_convert.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_convert.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_convert.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_errors.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_errors.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_errors.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_fetch.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_fetch.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_fetch.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_fileids.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_fileids.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_fileids.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_keywords.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_keywords.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_keywords.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_logwalker.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_logwalker.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_logwalker.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_mapping.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_mapping.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_mapping.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_metagraph.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_metagraph.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_metagraph.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_parents.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_parents.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_parents.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_push.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_push.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_push.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_remote.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_remote.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_remote.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_repository.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_repository.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_repository.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_revmeta.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_revmeta.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_revmeta.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_revspec.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_revspec.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_revspec.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_send.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_send.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_send.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_svk.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_svk.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_svk.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_transport.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_transport.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_transport.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_tree.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_tree.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_tree.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_workingtree.py
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_workingtree.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tests/test_workingtree.pyo
-${PYSITELIB}/bzrlib/plugins/svn/transport.py
-${PYSITELIB}/bzrlib/plugins/svn/transport.pyc
-${PYSITELIB}/bzrlib/plugins/svn/transport.pyo
-${PYSITELIB}/bzrlib/plugins/svn/tree.py
-${PYSITELIB}/bzrlib/plugins/svn/tree.pyc
-${PYSITELIB}/bzrlib/plugins/svn/tree.pyo
-${PYSITELIB}/bzrlib/plugins/svn/util.py
-${PYSITELIB}/bzrlib/plugins/svn/util.pyc
-${PYSITELIB}/bzrlib/plugins/svn/util.pyo
-${PYSITELIB}/bzrlib/plugins/svn/wiki.py
-${PYSITELIB}/bzrlib/plugins/svn/wiki.pyc
-${PYSITELIB}/bzrlib/plugins/svn/wiki.pyo
-${PYSITELIB}/bzrlib/plugins/svn/workingtree.py
-${PYSITELIB}/bzrlib/plugins/svn/workingtree.pyc
-${PYSITELIB}/bzrlib/plugins/svn/workingtree.pyo
